# slackbot

./: .clinerules  .cursorrules  .env.example  .eslintrc.json  .firebaserc  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .node-version  .tool-versions  .travis.yml  .windsurfrules  AGENT.md  AGENTS.md  CLAUDE.local.md.example  CLAUDE.md  CODEOWNERS  Cargo.toml  GEMINI.md  LICENSE  README.md  calculator.js  codecov.yml  deploy.js  ecosystem.config.cjs  ecosystem.config.js  firestore.indexes.json  firestore.rules  globals.d.ts  index.js  index.ts  jest.config.js  package-lock.json  package.json  sideci.yml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.claude/: settings.json
.devcontainer/: .env.example  compose.yaml  devcontainer.json
.github/: dependabot.yml  (+1 more)
wordhero/: .gitignore  Cargo.toml  boards.json  build-crossword-dict.js  build-dict.js  crossword-board-1.ai  crossword-board-2.ai  crossword-board-3.ai  crossword-board-4.ai  crossword-board-5.ai  crossword-board-6.ai  crossword-board-7.ai  crossword-board-8.ai  crossword-board-9.ai  crossword-board.ai  crossword.js  crossword.ts  generateCrossword.js  generateCrossword.ts  generateGrossword.js  generateGrossword.ts  grossword-base.ai  grossword-board-I.ai  grossword-board-N.ai  grossword-board-O.ai  grossword-board-Q.ai  grossword-board-T.ai  grossword-board-W.ai  grossword-board-X.ai  grossword-board-Y.ai  index.js  index.ts  kojien-preprocess.js  migrate.js  render.js  render.ts  trie.js  trie.ts
wordhero/LOUDS_builder/: build.py
wordhero/src/: bench.rs  main.rs
(+819 files in other folders)
