[package]
name = "wordhero"
version = "0.1.0"
authors = ["Koki Takahashi <hakatasiloving@gmail.com>"]
edition = "2018"

[dependencies]
panoradix = "0.6.5"
trie-rs = "0.1.1"
fst = "0.3.3"
fst-regex = "0.2.2"
rand = "0.6.5"
lazy_static = "1.3.0"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
serde_repr = "0.1.4"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"